// Author: Sandeep Belgavi
// Date: January 16, 2026

syntax = "proto3";

package com.google.adk.a2a.grpc;

option java_multiple_files = true;
option java_package = "com.google.adk.a2a.grpc";
option java_outer_classname = "A2aServiceProto";

// The A2A service definition.
service A2AService {
  // Sends a message to an agent and receives a response.
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
}

// The request message containing the user's query and session information.
message SendMessageRequest {
  string session_id = 1;
  string user_query = 2;
}

// The response message containing the agent's reply.
message SendMessageResponse {
  string agent_reply = 1;
}
